--- a/less/variables.less
+++ b/less/variables.less
@@ -24,6 +24,8 @@
 @border-real: #dee2e6;
 @dodger-blue: #1E90FF;
 @white: #FFFFFF;
+@droomPurple: #8B008B;
+
 
 // media queries
 @tablet: ~"(min-width:800px)";
