--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,18 @@
 .navBox{
     .customDisplay(center, center);
-    border: 2px solid gray;
+    background-color: @sea-shell;
+    border-radius: 8px;
 
     div {
         width: 100%;
         .customDisplay(center, center);
         flex-direction: column;
-        border: 2px solid blue;
+        border: 2px solid @droomPurple;
+        border-radius: 8px;
+
+        h1{
+            color: @droomPurple;
+        }
     }
 
     nav {
@@ -18,9 +24,10 @@
         text-decoration: none;
         font-size: 1.6rem;
         margin: 2%;
+        color: @ebony-clay;
 
         &:hover{
-            color: green;
+            color: @dodger-blue;
         }
     }
 }
