--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,19 +2,28 @@
     .customDisplay(center, center);
     flex-direction: column;
 
+    img{
+        border-radius: 8px;
+    }
+
     header {
         .customDisplay(center, center);
         flex-direction: column;
-        max-width: 800px;
-
-        img{
-            border-radius: 8px;
-        }
+        max-width: 800px;   
     }
 
     section {
         .customDisplay(center, center);
         flex-direction: column;
+
+        img {
+            display: none;
+
+            @media @tablet {
+                display: block;
+            }
+        }
+
     }
 }
 
@@ -22,7 +31,7 @@ button {
     .customButton();
 
     &:hover {
-        color: @btn-bg-color;
-        background-color: @porcelain;
+        color: @button-hover-color;
+        background-color: @button-hover-bg;
     }
 }
