--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,6 @@
 .navBox{
     .customDisplay(center, center);
-    background-color: @sea-shell;
+    background-color: @nav-bg;
     border-radius: 8px;
 
     div {
@@ -24,10 +24,10 @@
         text-decoration: none;
         font-size: 1.6rem;
         margin: 2%;
-        color: @ebony-clay;
+        color: @nav-font;
 
         &:hover{
-            color: @dodger-blue;
+            color: @nav-font-hover;
         }
     }
 }
