--- a/less/variables.less
+++ b/less/variables.less
@@ -1,13 +1,12 @@
 
 // Color pointers
-@nav-bg: @wild-sand;
-@nav-font: @river-bend;
+@nav-bg: @sea-shell;
+@nav-font: @ebony-clay;
 @nav-border: @sea-shell;
 @nav-font-hover: @dodger-blue;
 
-@header-font-color: @ebony-clay;
-@main-font-color: @shuttle-gray;
-@main-border-color: @border-real;
+@button-hover-color: @btn-bg-color;
+@button-hover-bg: @porcelain;
 
 @footer-background: @wild-sand;
 @footer-font-color: @waterloo;
