--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Poppins', sans-serif;
 }
 h1 {
   font-size: 4rem;
@@ -42,8 +42,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #F1F1F1;
-  border-radius: 8px;
 }
 .navBox div {
   width: 100%;
@@ -52,6 +50,7 @@ img {
   align-items: center;
   flex-direction: column;
   border: 2px solid #8B008B;
+  background-color: #F1F1F1;
   border-radius: 8px;
 }
 @media (min-width:800px) {
@@ -113,6 +112,7 @@ button {
   color: #F6F7F8;
   background-color: #22283A;
   font-size: 2rem;
+  margin-top: 2%;
   display: flex;
   justify-content: center;
   align-items: center;
