--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,6 +10,7 @@
     color: @font-color;
     background-color: @bg-color;
     font-size: 2rem;
+    margin-top: 2%;
     .customDisplay(center, center);
     border-radius: 8px;
 }
