--- a/less/global.less
+++ b/less/global.less
@@ -9,6 +9,8 @@
   
   html, body {
     font-family: 'Roboto', sans-serif;
+    background-image: radial-gradient(@white 50%, @droomPurple);
+    background-attachment: fixed;
   }
   
   h1, h2, h3, h4, h5 {
