--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,6 +25,10 @@
 
         @media @desktop {
             flex-flow: row wrap;
+            justify-content: space-evenly;
+            .container {
+                width: 45%;
+            }
         }
 
     }
