--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,8 @@
 @nav-border: @sea-shell;
 @nav-font-hover: @dodger-blue;
 
+@border-color: @river-bend;
+
 @button-hover-color: @btn-bg-color;
 @button-hover-bg: @porcelain;
 
