--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,6 @@
 .customDisplay(@justify, @align){
+    display: -ms-flex;
+	display: -webkit-flex;
     display: flex;
     justify-content: @justify;
     align-items: @align;
