--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,13 +6,24 @@
     align-items: @align;
 }
 
-.customButton(@font-color: @porcelain, @bg-color: @btn-bg-color) {
-    width: 11rem;
+.customButton(@font-color: @white, @bg-color: @btn-bg-color) {
+    width: 14rem;
     height: 3.8rem;
     color: @font-color;
     background-color: @bg-color;
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-top: 2%;
     .customDisplay(center, center);
-    border-radius: 8px;
+    border-radius: 35px;
+    cursor: pointer;
 }
+
+//     background-color: #9B51E0;
+//     color: white;
+//     margin-top: 1vh;
+//     padding: 10px 50px;
+//     border-radius: 35px;
+//     width:200px;
+//     heigth:100px;
+//     border:none;
+//     cursor: pointer;
