--- a/less/variables.less
+++ b/less/variables.less
@@ -16,7 +16,7 @@
 @sea-shell: #F1F1F1;
 @ebony-clay: #23293B;
 @porcelain: #F6F7F8;
-@btn-bg-color: #9B51E0;
+@btn-bg-color: #22283A;
 @dodger-blue: #1E90FF;
 @white: #FFFFFF;
 @droomPurple: #8B008B;
