--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,9 @@ img {
   align-items: center;
   flex-direction: column;
 }
+.home .introP {
+  font-size: 2rem;
+}
 .home img {
   border-radius: 8px;
 }
@@ -120,7 +123,9 @@ img {
 @media (min-width:1000px) {
   .home .sectionContainer {
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: stretch;
+    align-items: stretch;
+    flex: 1;
   }
   .home .sectionContainer .container {
     width: 45%;
@@ -133,26 +138,33 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 1%;
+}
+@media (min-width:1000px) {
+  .home section {
+    flex-grow: 1;
+    justify-content: space-between;
+  }
 }
 .home section img {
   display: none;
 }
 @media (min-width:1000px) {
   .home section img {
-    display: block;
-    max-height: 450px;
+    display: flex;
+    height: 400px;
   }
 }
 @media (min-width:800px) {
   .home section .tabletImg {
-    display: block;
+    display: flex;
   }
 }
 button {
   width: 14rem;
   height: 3.8rem;
-  color: #FFFFFF;
-  background-color: #9B51E0;
+  color: #F6F7F8;
+  background-color: #22283A;
   font-size: 1.8rem;
   margin-top: 2%;
   display: -ms-flex;
@@ -164,8 +176,11 @@ button {
   cursor: pointer;
 }
 button:hover {
-  color: #9B51E0;
+  color: #22283A;
   background-color: #F6F7F8;
+}
+.buttonTag {
+  margin-top: 2%;
 }
 .about {
   display: -ms-flex;
@@ -210,11 +225,12 @@ button:hover {
   justify-content: center;
   align-items: baseline;
   flex-direction: column;
+  border: 2px solid blue;
+  flex: 1;
 }
 @media (min-width:800px) {
   .about .team {
     flex-direction: row;
-    justify-content: space-evenly;
   }
 }
 .about .member {
@@ -226,13 +242,17 @@ button:hover {
   flex-direction: column;
   border-bottom: 2px solid #454A59;
   padding-bottom: 5%;
+  padding-left: 1%;
+  padding-right: 1%;
   flex: 1;
 }
 @media (min-width:800px) {
   .about .member {
+    justify-content: flex-start;
     width: 45%;
     height: 100%;
     border: none;
+    border: 2px solid black;
   }
 }
 .about .member img {
