--- a/less/about-page.less
+++ b/less/about-page.less
@@ -28,10 +28,13 @@
     .team{
         .customDisplay(center, baseline);
         flex-direction: column;
+        border: 2px solid blue;
+        flex: 1;
 
         @media @tablet {
             flex-direction: row;
-            justify-content: space-evenly;
+            // justify-content: stretch;
+            // align-items: stretch;
         }
     }
 
@@ -40,12 +43,16 @@
         flex-direction: column;
         border-bottom: 2px solid @border-color;
         padding-bottom: 5%;
+        padding-left: 1%;
+        padding-right: 1%;
         flex: 1;
 
         @media @tablet {
+            justify-content: flex-start;
             width: 45%;
             height: 100%;
             border: none;
+            border: 2px solid black;
         }
 
         img {
