--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,7 +6,7 @@
     align-items: @align;
 }
 
-.customButton(@font-color: @white, @bg-color: @btn-bg-color) {
+.customButton(@font-color: @porcelain, @bg-color: @btn-bg-color) {
     width: 14rem;
     height: 3.8rem;
     color: @font-color;
@@ -18,12 +18,3 @@
     cursor: pointer;
 }
 
-//     background-color: #9B51E0;
-//     color: white;
-//     margin-top: 1vh;
-//     padding: 10px 50px;
-//     border-radius: 35px;
-//     width:200px;
-//     heigth:100px;
-//     border:none;
-//     cursor: pointer;
