--- a/css/index.css
+++ b/css/index.css
@@ -225,12 +225,12 @@ button:hover {
   justify-content: center;
   align-items: baseline;
   flex-direction: column;
-  border: 2px solid blue;
-  flex: 1;
 }
 @media (min-width:800px) {
   .about .team {
-    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: stretch;
+    align-items: center;
   }
 }
 .about .member {
@@ -242,21 +242,24 @@ button:hover {
   flex-direction: column;
   border-bottom: 2px solid #454A59;
   padding-bottom: 5%;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
   flex: 1;
 }
 @media (min-width:800px) {
   .about .member {
-    justify-content: flex-start;
     width: 45%;
     height: 100%;
     border: none;
-    border: 2px solid black;
   }
 }
 .about .member img {
   max-width: 180px;
+}
+@media (min-width:800px) {
+  .about .react {
+    height: 50rem;
+  }
 }
 .about .last {
   border: none;
